# WoWSniffer

./: CMakeLists.txt  Chat.cpp  Dispatch.cpp  Dispatch.cpp~  FindGTK2.cmake  GuildRosterParser.cpp  Languages.cpp  Main.cpp  Spells.cpp  Thread.cpp  Thread.h  Utility.cpp  Utility.h  WoWProtocol.py  consts.h  crypt.cpp  crypt.h  crypt.hpp  opcodecode.cpp  opcodes.h  positiondrawer.cpp  positiondrawer.h  tcpchecksum.cpp  tcpchecksum.h
